default/objects/White_Space__c/White_Space__c.object-meta.xml
<CustomObject>
    <label>White Space</label>
    <nameField>
        <label>White Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>White Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>