default/objects/White_Space__c/fields/AreCellsFiltered__c.field-meta.xml
<CustomField>
    <fullName>AreCellsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether cell data is populated based on having a parent relationship to the Account</description>
    <label>Filter Cells</label>
    <type>Checkbox</type>
</CustomField>