default/objects/White_Space__c/fields/AreColumnsFiltered__c.field-meta.xml
<CustomField>
    <fullName>AreColumnsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Columns</label>
    <type>Checkbox</type>
</CustomField>