default/objects/White_Space__c/fields/AreRowsFiltered__c.field-meta.xml
<CustomField>
    <fullName>AreRowsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Rows</label>
    <type>Checkbox</type>
</CustomField>