default/objects/White_Space__c/fields/AreUnrelatedCellsFiltered__c.field-meta.xml
<CustomField>
    <fullName>AreUnrelatedCellsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If filter cells is checked, then this checkbox determines if amount types using an object that has no relation to an account are also filtered out, or are still shown on the cross sell map.</description>
    <label>Filter Cells Without Relationships</label>
    <type>Checkbox</type>
</CustomField>