default/objects/White_Space__c/fields/Cell_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>Cell_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Cells related to this Cross Sell Report</description>
    <inlineHelpText>Used in the account plan score - If you are not using a freeform whitespace, this value is not likely to change much</inlineHelpText>
    <label>Cell Max Modified Date</label>
    <summarizedField>White_Space_Cell__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>White_Space_Cell__c.White_Space__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>