default/objects/White_Space__c/fields/Threshold_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Amount_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Threshold Amount Type</label>
    <referenceTo>White_Space_Amount_Type__c</referenceTo>
    <relationshipLabel>White Spaces</relationshipLabel>
    <relationshipName>White_Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>