default/objects/White_Space__c/fields/White_Space_Template__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cross-Sell Template</label>
    <referenceTo>White_Space_Template__c</referenceTo>
    <relationshipLabel>Cross-Sell Maps</relationshipLabel>
    <relationshipName>White_Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>