default/objects/White_Space__c/fields/Whitespace_Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_Cell_Count__c</fullName>
    <label>Whitespace Cell Count</label>
    <summaryForeignKey>White_Space_Cell__c.White_Space__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>