default/objects/White_Space__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>